# metacognitive-balance-model

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: experiments.md  glossary.md  mbt-ontology.md  model-v2-design.md  model.md  research-pipeline.md
docs/audit/: claim-model-alignment.md  model-revision-backlog.md
docs/briefs/: 2026-07-07-experiment-summaries.md  2026-07-07-questions-for-han.md  2026-07-07-reading-guide-for-note.md  2026-07-08-han-feedback-intake.md
docs/lit/: 00-intake.md  P2-clinical-context.md  daniel2014.md  fleming2017.md  hanlee2022.md  lieder2017.md  merabet2004.md  nelson1990.md  proust2012.md  sun2026-neurocogmap.md  synthesis.md  wells2019.md
paper/: main.tex  references.bib
scripts/: run_all.py
src/mcbalance/: __init__.py  experiments.py  metrics.py  model.py
tests/: test_model.py
